# Python

./: .gitignore  README.md
Backend/FastApi/: main.py  request.py  users.py
Backend/apiUsers/: crud.py  database.py  login.py  main.py  models.py  modelsturso.py  schemas.py  sql_app.db  tursodb.py  users.py
Backend/api_bcv/: main.py  obtener_tasa.py
Backend/flask/: helloworld.py
Backend/scraperApi/: main.py
Chequeos/: Vendedores.py
Javascript/: event1.js
Javascript/DOM/: 01_introduccion-DOM.js  index.html
Javascript/message_web/: index.html  main.py  styles.css
Projects/CalculadoreRetenciones/: README.md  pyproject.toml
Projects/DiskFix/: main.py
Projects/EmisorGuiasDespacho/: main.py
Projects/scraperAliexpress/: main.py
Projects/scriptTasaBcv/: main.py
Projects/spaceReview/: main.py  pyproject.toml
flet/: README.md
flet/app_gestor_precios/: README.md  pyproject.toml  requirements.txt
flet/app_gestor_precios/src/: ex.py  main.py
flet/editor_precios/: main.py
flet/login/: crud.py  db.py  login.py  main.py  models.py  requirements.txt  usuarios.db
flet/new/: pyproject.toml
flet/src/: To_do_list_example.py  ex.py  hello_world.py  main.py  to_do_list.py
hello_python/JSON/: 01_json.py  02_json_dump.py  03_leer_json.py  04_escribir_json.py  ordenes.json
hello_python/OCR/: main.py  try2.py
hello_python/api-gemini/: main.py  requirements.txt
hello_python/crud/: database.py  main.py  users.db
hello_python/datetime/: date.py
hello_python/postgresql/: config.py  connect.py  create_tables.py  database.ini
(+69 files in other folders)
