[project]
name = "app-gestor-precios"
version = "0.1.0"
description = "Esta app permite modificar una lista de precios para la compañia DIACENCA con la integracion de openpyxl como manejador de excel y mariaDB para almacencar la ubicacion y los precios ya creados y los que se van a implementar nuevamente"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hyuri.dev", email = "jeffersoonpaez@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "app-gestor-precios"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}